--- a/package.json
+++ b/package.json
@@ -2,15 +2,13 @@
   "name": "app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://whois.bekahthe.dev",
+  "homepage": "https://bekahthe.dev",
   "dependencies": {
     "@formspree/react": "^2.3.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.2.0",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
@@ -43,6 +41,9 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^4.0.0"
+    "autoprefixer": "^10.4.12",
+    "gh-pages": "^4.0.0",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.2.1"
   }
 }
